@@ -18,6 +18,7 @@ PHP                                                                        NEWS
 - Fixed bug #29340 (win32 build produces invalid php_ifx.dll). (Edin)
 - Fixed bug #29335 (fetch functions now use MYSQLI_BOTH as default) (Georg)
 - Fixed bug #29291 (get_class_vars() return names with NULLs). (Marcus)
+- Fixed bug #29264 (gettext extension not working). (Edin)
 - Fixed buf #29258 (variant_date_from_timestamp() does not honour
   timezone).  (Wez)
 - Fixed bug #29119 (html_entity_decode() misbehaves with UTF-8). (Moriyoshi)
